--- a/interface.css
+++ b/interface.css
@@ -21,10 +21,9 @@
     border-style: outset outset outset outset;
     border-radius: 7px;
     text-align: center;
-    letter-spacing: 15px;
     border-color: #f51a0a;
     border-width: 5px;
-    top: auto;
+    top: 650;
     width: 650px;
     margin: auto;
     background-color: #e6f3ff;
