--- a/interface.css
+++ b/interface.css
@@ -16,7 +16,7 @@
 .descriptionDiv {
     color: #f51a0a;
     position: relative;
-    font-family: monospace, monospace;
+    font-family: Serif;
     font-size: 25px;
     border-style: outset outset outset outset;
     border-radius: 7px;
