--- a/interface.css
+++ b/interface.css
@@ -29,7 +29,7 @@
     background-color: #e6f3ff;
 }
 .productDiv{
-        color: #f51a0a;
+    color: #f51a0a;
     position: relative;
     font-family: Serif;
     font-size: 25px;
@@ -42,4 +42,19 @@
     width: 650px;
     margin: auto;
     background-color: #e6f3ff;
+}
+.linkDiv {
+  color: #f51a0a;
+    position: relative;
+    font-family: Serif;
+    font-size: 25px;
+    border-style: outset outset outset outset;
+    border-radius: 7px;
+    text-align: center;
+    border-color: #f51a0a;
+    border-width: 5px;
+    top: 80;
+    width: 150px;
+    margin: auto;
+    background-color: #e6f3ff;  
 }
